# google-a2a

./: README.md
client/: .env.example  Dockerfile  hello_oauth_client.py  pyproject.toml  streamlit_app.py
server/hello/: Dockerfile  agent_executor.py
server/hello_apikey/: README.md  agent_executor.py  pyproject.toml
server/hello_oauth/: Dockerfile  __main__.py  agent_executor.py  auth.py  pyproject.toml
