[project]
name = "hello-a2a-client"
version = "0.1.0"
description = "Sample A2A clients: Streamlit GUI and test clients"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.25",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "streamlit>=1.55.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
